[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dbbasic-textbrowser"
version = "0.1.0"
description = "A text-mode web browser with AI assistance"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "DBBasic TextBrowser Contributors"}
]
keywords = ["browser", "text", "terminal", "curses", "ai", "lynx", "web", "accessibility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Environment :: Console :: Curses",
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2020.1.16",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/askrobots/dbbasic-textbrowser"
"Bug Reports" = "https://github.com/askrobots/dbbasic-textbrowser/issues"
"Source" = "https://github.com/askrobots/dbbasic-textbrowser"

[project.scripts]
dbbasic-textbrowser = "browser:cli"

[tool.setuptools]
py-modules = ["browser"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.md"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
